--- a/prj/bst.qsf
+++ b/prj/bst.qsf
@@ -46,20 +46,39 @@ set_global_assignment -name LAST_QUARTUS_VERSION 15.1.0
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
 set_location_assignment PIN_M2 -to CLK2
-set_global_assignment -name EDA_BOARD_DESIGN_BOUNDARY_SCAN_TOOL "BSDL (Boundary Scan)"
-set_global_assignment -name VERILOG_FILE ../src/globals.v
-set_global_assignment -name QSYS_FILE ../src/core/vjtag.qsys
-set_global_assignment -name VERILOG_FILE ../src/top.v
-set_global_assignment -name QIP_FILE ../src/core/clk_pll.qip
-set_global_assignment -name SIGNALTAP_FILE ../stp/vj.stp
-set_global_assignment -name QIP_FILE ../src/core/altio.qip
+set_global_assignment -name EDA_BOARD_DESIGN_BOUNDARY_SCAN_TOOL "<None>"
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT NONE -section_id eda_board_design_boundary_scan
 set_location_assignment PIN_A8 -to IO_A8
 set_location_assignment PIN_B8 -to IO_B8
 set_location_assignment PIN_C8 -to IO_C8
 set_location_assignment PIN_D8 -to IO_D8
-set_global_assignment -name SDC_FILE ../src/timing.sdc
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name ENABLE_SIGNALTAP OFF
+set_global_assignment -name USE_SIGNALTAP_FILE ../stp/vj.stp
+set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
+set_global_assignment -name TIMEQUEST_MULTICORNER_ANALYSIS ON
+set_global_assignment -name VERILOG_FILE ../src/globals.v
+set_global_assignment -name QSYS_FILE ../src/core/vjtag.qsys
+set_global_assignment -name QIP_FILE ../src/core/clk_pll.qip
+set_global_assignment -name SIGNALTAP_FILE ../stp/vj.stp
+set_global_assignment -name QIP_FILE ../src/core/altio.qip
+set_global_assignment -name SDC_FILE ../src/timing.sdc
+set_global_assignment -name VERILOG_FILE ../src/top.v
+set_global_assignment -name ENABLE_OCT_DONE OFF
+set_global_assignment -name ENABLE_CONFIGURATION_PINS OFF
+set_global_assignment -name ENABLE_BOOT_SEL_PIN OFF
+set_global_assignment -name USE_CONFIGURATION_DEVICE ON
+set_global_assignment -name CRC_ERROR_OPEN_DRAIN OFF
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
+set_global_assignment -name CYCLONEIII_CONFIGURATION_DEVICE EPCS16
+set_global_assignment -name CONFIGURATION_VCCIO_LEVEL 3.3V
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
